2010-04-26  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp, win32/shellex/ASAPShellEx.propdesc,
  win32/setup/asap.wxs, win32/Makefile:
  support Subsongs and PAL/NTSC on Windows Vista and 7

* win32/shellex/ASAPShellEx.cpp: implemented DllCanUnloadNow


2010-04-23  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: install the shell extension on Vista and 7

* win32/shellex/ASAPShellEx.cpp: register for all supported file types


2010-04-22  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp: added "PAL/NTSC"

* win32/shellex/ASAPShellEx.cpp, win32/Makefile:
  initial implementation for Windows Vista and 7


2010-03-30  Piotr Fusik  <fox@scene.pl>
* csharp/asapplay.cs, csharp/Makefile, INSTALL, README, PORTS.xml:
  simple command-line player in C#


2010-03-16  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, asapscan.c, chksap.pl,
  csharp/ASAP.ppcs, flash/ASAP_ModuleInfo.as, java/ASAP_ModuleInfo.java:
  support NTSC tag in SAP files


2010-03-08  Piotr Fusik  <fox@scene.pl>
* PORTS.xml: added Windows Explorer extension

* win32/shellex/ASAPShellEx.cpp: parse once per file not once per property


2010-03-07  Piotr Fusik  <fox@scene.pl>
* asap.c, win32/Makefile: ASAP_ONLY_INFO trims ASAPShellEx.dll from 120k to 40k

* win32/shellex/ASAPShellEx.cpp, win32/Makefile, win32/gui.rc,
  win32/setup/asap.wxs, README, INSTALL: Windows Explorer extension
  to display metadata

* win32/dshow/asap_dsf.cpp: fixed memory leak on non-ANSI filename error

* asap.c, asap.h, asapconv.c, win32/bass/bass_asap.c: ASAP_DateToYear()


2010-03-02  Piotr Fusik  <fox@scene.pl>
* xmms/libasap-xmms.c: fix for big endian machines


2010-02-19  Piotr Fusik  <fox@scene.pl>
* win32/bass/bass_asap.c: implemented ID3 tag, unfortunately AIMP2
  doesn't ask for it

* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: BASS add-on for AIMP

* win32/setup/license.rtf: updated years


2010-02-12  Piotr Fusik  <fox@scene.pl>